objects/AdvancedSearchDetail__c.object
<CustomObject>
    <fields>
        <fullName>AdvancedSearch__c</fullName>
        <label>Advanced Search</label>
        <referenceTo>AdvancedSearch__c</referenceTo>
        <relationshipLabel>Advanced Search Details</relationshipLabel>
        <relationshipName>Advanced_Search_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <label>Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateValue1__c</fullName>
        <label>Date Value 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateValue2__c</fullName>
        <label>Date Value 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FilterType__c</fullName>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Include</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JoinCondition__c</fullName>
        <label>Join Condition</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListValue2__c</fullName>
        <label>List Value 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ListValue__c</fullName>
        <label>List Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberValue1__c</fullName>
        <label>Number Value 1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberValue2__c</fullName>
        <label>Number Value 2</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Advanced Search Detail</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advanced Search Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>